--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "execa": "^5.1.1",
     "kindlogs": "^1.1.1",
     "mv": "^2.1.1",
+    "nginx-conf": "^2.0.0",
     "unzipper": "^0.10.11"
   }
 }
