--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/pbxx/nginxr#readme",
   "dependencies": {
+    "ejs": "^3.1.6",
     "execa": "^5.1.1",
     "kindlogs": "^1.1.1",
     "mv": "^2.1.1",
