--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "execa": "^5.1.1",
+    "fs-extra": "^10.0.0",
     "kindlogs": "^1.1.1",
     "mv": "^2.1.1",
     "nginx-conf": "^2.0.0",
