--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/pbxx/nginxr#readme",
   "dependencies": {
+    "deepmerge": "^4.2.2",
     "ejs": "^3.1.6",
     "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
