--- a/package.json
+++ b/package.json
@@ -11,16 +11,14 @@
     "type": "git",
     "url": "git+https://github.com/pbxx/nginxr.git"
   },
-  "author": "Donavan Lewis",
+  "author": "xPBXx",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/pbxx/nginxr/issues"
   },
   "homepage": "https://github.com/pbxx/nginxr#readme",
   "dependencies": {
-    "deepmerge": "^4.2.2",
     "ejs": "^3.1.6",
-    "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
     "kindlogs": "^1.1.1",
     "mv": "^2.1.1",
